--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "mongoose": "^5.10.15",
+    "morgan": "^1.10.0",
+    "node-geocoder": "^3.27.0",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "nodemon": "^2.0.6"
   }
 }
