--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.2.3",
+    "helmet": "^4.2.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.16",
-    "slugify": "^1.4.6"
+    "slugify": "^1.4.6",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "colors": "^1.4.0",
