--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.16",
     "slugify": "^1.4.6",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "colors": "^1.4.0"
   },
   "devDependencies": {
-    "colors": "^1.4.0",
+    
     "nodemon": "^2.0.6"
   }
 }
