--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -27,11 +28,9 @@
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.16",
     "slugify": "^1.4.6",
-    "xss-clean": "^0.1.1",
-    "colors": "^1.4.0"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    
     "nodemon": "^2.0.6"
   }
 }
